--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-html-replace": "^1.6.2",
     "gulp-imagemin": "^3.4.0",
     "gulp-jshint": "^2.0.4",
+    "gulp-jslint": "^1.0.10",
     "gulp-less": "^3.3.2",
     "gulp-uglify": "^3.0.0",
     "gulp-usemin": "^0.3.28",
